samples/_failures_safe/1761365394_322c4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2786bac.c:136:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  136 | void display_
      | ^~~~
